@@ -20,6 +20,9 @@ CHANGES
 - Depend on zope.component >= 3.6 instead of zope.app.component as the
   `queryNextUtility` function was moved there. 
 
+- Remove the old ``zope.app.i18n.metadirectives`` module as the directive was
+  moved to ``zope.i18n`` ages ago.
+
 3.5.0 (2009-02-01)
 ------------------
 
